# charism

./: Makefile  README  charism.cabal  gen-imgs  launch  make_cgi
es/: charism-es.appcache
src/: AjaxGetRound.hs  Charism.hs  DictRecurse.hs  GenAll.hs  ImgGen.hs  Main.hs  Opt.hs  Util.hs.no  WordOrder.hs
src/Data/: Trie.hs
web/: index.html  manifest.appcache
