name:           charism
version:        0.1
license:        BSD3
author:         danl@alum.mit.edu
synopsis:       texttwist clone that uses scrabble letter probabilities
build-depends:  base >= 4, bytestring, containers, directory, filepath, mtl,
                polyopt, random, FUtil, MonadRandom
build-type:     Simple

executable:     charism
hs-source-dirs: src
main-is:        Main.hs
