name:           charism
version:        0.1
license:        BSD3
author:         danl@alum.mit.edu
synopsis:       texttwist clone that uses scrabble letter probabilities
build-type:     Simple

executable:     charism
build-depends:
    base
  , bytestring
  , containers
  , directory
  , filepath
  , mtl
  , polyopt
  , random
  , split
  , MonadRandom
hs-source-dirs: src
main-is:        Main.hs
